[package]
name = "sqltool"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }


[dependencies]
clap = { workspace = true, features = ["derive"] }
wild = { workspace = true }
argfile = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }